force-app/main/default/objects/FEC_Integration_Case_Info__c/FEC_Integration_Case_Info__c.object-meta.xml
<CustomObject>
    <label>FEC Integration Case Info</label>
    <nameField>
        <label>FEC Integration Case Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Integration Case Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>