force-app/main/default/objects/FEC_Integration_Case_Info__c/fields/FEC_Info_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Info_ID__c</fullName>
    <label>Info ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>