force-app/main/default/objects/FEC_Integration_Case_Info__c/fields/FEC_Info_Value__c.field-meta.xml
<CustomField>
    <fullName>FEC_Info_Value__c</fullName>
    <label>Info Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>