force-app/main/default/objects/FEC_Integration_Case_Info__c/fields/FEC_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Case</label>
    <referenceTo>FEC_Integration_Case__c</referenceTo>
    <relationshipLabel>FEC Integration Case Infos</relationshipLabel>
    <relationshipName>FEC_Integration_Case_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>