force-app/main/default/objects/FEC_Integration_Case_Info__c/fields/FEC_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Property_Type__c</fullName>
    <label>Property Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>