force-app/main/default/objects/FEC_Integration_Case_Info__c/fields/FEC_Source_Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>FEC_Source_Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>